implemented dalli caching for flickr images

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,7 @@
 
   %body
     %a{:href => APP_CONFIG['domain']}
-      %img.logo{:src => "/assets/logo.png", :alt => "Connect Chicago", :title => "Connect Chicago"}
+      %img.logo{:src => "/assets/logo.png", :alt => "Connect Chicago"}
     .navbar
       .navbar-inner
         .container
