fix for radius searches

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -23,7 +23,9 @@
         search radius
       
       .pull-right
-        %button#view_mode.btn.btn-info Show list
+        %button#view_mode.btn.btn-info 
+          Show list
+          %i.icon-list.icon-white
 
       %input#btnSearch.btn.btn-primary{:type => "button", :value => "Search"}
       %button#reset.btn Reset
