--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,4 +1,4 @@
-%h2 Edit #{ resource_name.to_s.humanize }
+%h2 Edit your account
 = semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = f.semantic_errors
   = f.inputs do
