--- a/app/views/location/show.html.haml
+++ b/app/views/location/show.html.haml
@@ -1,4 +1,4 @@
-- title @location[:organizationname] + " - Tech Locator"
+- title @location[:organizationname]
 - page_layout "container"
 - content_for :javascripts do
   = javascript_include_tag "http://maps.google.com/maps/api/js?sensor=false" 
