--- a/app/views/location/show.html.haml
+++ b/app/views/location/show.html.haml
@@ -150,7 +150,7 @@
       %p
         - featured_photo = getFlickrFeaturedPhoto(@location[:flickr_tag])
         - unless featured_photo.nil?
-          %img.img-polaroid{:src => "/location/#{params[:slug]}/image.jpg", :title => @location[:organizationname], :alt => @location[:organizationname]}
+          %img.img-polaroid{:src => "/location/#{params[:id]}/image.jpg", :title => @location[:organizationname], :alt => @location[:organizationname]}
 
       #mapDetail
       %hr
