--- a/app/views/admins/edit.html.haml
+++ b/app/views/admins/edit.html.haml
@@ -4,6 +4,9 @@
 = semantic_form_for @admin do |f|
   = f.semantic_errors
   = f.inputs do
+    = f.input :first_name
+    = f.input :last_name
+    = f.input :organization, hint:"Organization or agency"
     = f.input :email, hint:"Email address"
   = f.buttons do
     = f.commit_button :button_html => {:class => "btn btn-primary", :value => "Save"}
