--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,6 +2,9 @@
 = semantic_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = f.semantic_errors
   = f.inputs do
+    = f.input :first_name
+    = f.input :last_name
+    = f.input :organization, hint:"Your organization or agency"
     = f.input :email, hint:"Enter your email address"
     = f.input :password, hint:"Enter password"
     = f.input :password_confirmation, hint:"Confirm password"
