updated logo, favicon and map pushpin

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
       @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic');
     = content_for :stylesheets
     
-    /%link(href="images/favicon.ico" rel="shortcut icon")
+    %link(href="/favicon.ico" rel="shortcut icon")
 
   %body
     %a{:href => APP_CONFIG['domain']}
