--- a/app/views/location/edit.html.haml
+++ b/app/views/location/edit.html.haml
@@ -2,9 +2,18 @@
   Editing
   = "'#{@ft_location[:organizationname]}'"
 
-= semantic_form_for(:location, :action => 'update', :html => { :class => "form-horizontal"} ) do |f|
-  = f.inputs do
+/ = semantic_form_for(:location, :action => 'update', :html => { :class => "form-horizontal"} ) do |f|
+/   = f.inputs do
+/     = f.input :organizationname, :label => "Name"
+/     = f.input :organizationtype, :label => "Type"
+/   = f.buttons do
+/     = f.commit_button :button_html => {:class => "primary", :value => "Save"}
+
+= simple_form_for(:location, :html => { :class => 'form-horizontal' }) do |f|
+  = f.error_notification
+
+  .form-inputs.row
     = f.input :organizationname, :label => "Name"
-    = f.input :organizationtype, :label => "Type"
-  = f.buttons do
-    = f.commit_button :button_html => {:class => "primary", :value => "Save"}
+    = f.input :organizationtype, :label => "Type", :collection => ["Chicago Public Library", "City Colleges of Chicago"]
+ 
+  = f.button :submit, :button_html => {:class => "btn-primary", :value => "Save"}
