--- a/app/views/location/edit.html.haml
+++ b/app/views/location/edit.html.haml
@@ -1,15 +1,24 @@
 %h2
   Editing
-  = "'#{@location.organizationname}'"
+  = "'#{@location_title}'"
 
 .row
   .span7
     = simple_form_for(:location, :html => { :class => 'form-horizontal' }) do |f|
-      = f.error_notification
+      - unless @location.errors.messages.length == 0
+        .alert.alert-error.fade.in
+          %a.close{"data-dismiss" => "alert", :href => "#"} &times;
+          %h4 Plese review the following errors:
+          %ul
+          - @location.errors.messages.each do |error|
+            %li 
+              = "#{error[0].to_s.humanize} #{error[1][0]}"
 
-      .form-inputs.row
-        = f.input :organizationname, :label => "Name"
-        = f.input :organizationtype, :label => "Type", :collection => ["Chicago Housing Authority", "Chicago Public Library", "Chicago Public School", "City Colleges of Chicago", "Community Service Center", "Community Technology Center", "Senior Center", "WorkForce Center", "WorkNet Chicago", "Youth Career Development Center"]
+      %fieldset
+        %legend Basic information
+        .form-inputs.row
+          = f.input :organization_name
+          = f.input :organization_type, :collection => ["Chicago Housing Authority", "Chicago Public Library", "Chicago Public School", "City Colleges of Chicago", "Community Service Center", "Community Technology Center", "Senior Center", "WorkForce Center", "WorkNet Chicago", "Youth Career Development Center"]
      
       = f.button :submit, :button_html => {:class => "btn-primary", :value => "Save"}
 
@@ -25,7 +34,7 @@
         %dt
           Tec Services Id
         %dd
-          = @location.tecservicesid
+          = @location.tecservices_id
         %dt
           URL
         %dd
@@ -46,36 +55,36 @@
 / notes
 / slug - can't edit
 / tecservicesid - can't edit
-/ organizationname
-/ organizationtype
+/ organization_name
+/ organization_type
 / full_address - generated based on other fields
 / address
 / city
 / state
-/ zipcode
-/ orgphone
+/ zip_code
+/ org_phone
 / hours
 / website
 / appointment
 / internet
 / wifi
 / training
-/ pcuserestrictions
-/ hardwarepublic
-/ assistivetechnology
-/ internetupload
-/ internetdownload
-/ volunteersused
-/ volunteersusedhow
-/ volunteerswantedhow
-/ publicwifidetail
-/ nearestparking
-/ nearestparkingdetail
-/ publictransportationdetail
-/ timeallowedperuser
-/ timeallowedperuserdetail
-/ roomlist
-/ handicapaccessdetail
+/ pc_use_restrictions
+/ hardware_public
+/ assistive_technology
+/ internet_upload
+/ internet_download
+/ volunteers_used
+/ volunteers_used_how
+/ volunteers_wanted_how
+/ public_wifi_detail
+/ nearest_parking
+/ nearest_parking_detail
+/ public_transportation_detail
+/ time_allowed_per_user
+/ time_allowed_per_user_detail
+/ room_list
+/ handicap_access_detail
 / friendly_description
 / agency_leadership_contact
 / agency_staff_person_contact_email
