added will_paginate for location_changes, set up locationWidget view

--- a/app/views/location_changes/index.html.haml
+++ b/app/views/location_changes/index.html.haml
@@ -29,3 +29,5 @@
                 = value[0]
               %td{:style => 'color: green;'}
                 = value[1]
+
+= will_paginate @location_changes, :renderer => BootstrapPagination::Rails
