added twitter_handle to admins model

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,6 +5,7 @@
     = f.input :first_name
     = f.input :last_name
     = f.input :organization, hint:"Your organization or agency"
+    = f.input :twitter_handle, hint:"(optional)"
     = f.input :email, hint:"Enter your email address"
     = f.input :password, hint:"Enter password"
     = f.input :password_confirmation, hint:"Confirm password"
