--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,6 +38,8 @@
               %li
                 %a{:href => APP_CONFIG['domain'] + "learn"} Learn
               %li
+                %a{:href => APP_CONFIG['domain'] + "partners"} Partners
+              %li
                 %a{:href => APP_CONFIG['domain'] + "news-events"} News &amp; Events
               %li
                 %a{:href => APP_CONFIG['domain'] + "volunteer"} Volunteer
