--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,5 +1,7 @@
 body {
+  font-size: 16px;
   font-family: 'Quattrocento Sans', sans-serif;
+  line-height: 22px;
 }
 
 #mapCanvas img, #mapDetail img {
