added location list link for search engines

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -66,6 +66,9 @@
       
     %p#resultCount.alert.alert-info.lead
 
+    %p{:style => 'display:none;'}
+      %a{:href => '/location/'} Full list of locations &raquo;
+
   .span8
     #listCanvas{:style => "display: none;"}
       #resultsList
