reduced cache expiration to 1 day for flickr images, added contact us to nav

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,6 +45,8 @@
                   %a{:href => APP_CONFIG['domain'] + "news-events"} News &amp; Events
                 %li
                   %a{:href => APP_CONFIG['domain'] + "about"} About
+                %li
+                  %a{:href => APP_CONFIG['domain'] + "contact-us"} Contact Us
 
               %ul.nav.pull-right
                 - if admin_signed_in?
